--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -1,127 +1,29 @@
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/history_id"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/history_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/history_seq_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/history_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/history_lobbyType"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/history_seq_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:shrinkColumns="0,1"
-            android:stretchColumns="0,1">
+    <TextView
+        android:id="@+id/history_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-            <TableRow >
-
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/radiant_01"
-                    android:layout_height="96dp"
-                    android:layout_width="96dp"
-                    android:scaleType="centerInside"
-                    android:gravity="center" />
-
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/dire_01"
-                    android:layout_height="96dp"
-                    android:layout_width="96dp"
-                    android:scaleType="centerInside"
-                    android:gravity="center" />
-
-            </TableRow>
-
-            <TableRow>
-
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/radiant_02"
-                    android:layout_height="96dp"
-                    android:layout_width="96dp"
-                    android:scaleType="centerInside"
-                    android:gravity="center" />
-
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/dire_02"
-                    android:layout_height="96dp"
-                    android:layout_width="96dp"
-                    android:scaleType="centerInside"
-                    android:gravity="center" />
-            </TableRow>
-
-            <TableRow>
-
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/radiant_03"
-                    android:layout_height="96dp"
-                    android:layout_width="96dp"
-                    android:scaleType="centerInside"
-                    android:gravity="center" />
-
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/dire_03"
-                    android:layout_height="96dp"
-                    android:layout_width="96dp"
-                    android:scaleType="centerInside"
-                    android:gravity="center" />
-            </TableRow>
-
-            <TableRow>
-
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/radiant_04"
-                    android:layout_height="96dp"
-                    android:layout_width="96dp"
-                    android:scaleType="centerInside"
-                    android:gravity="center" />
-
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/dire_04"
-                    android:layout_height="96dp"
-                    android:layout_width="96dp"
-                    android:scaleType="centerInside"
-                    android:gravity="center" />
-            </TableRow>
-
-            <TableRow>
-
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/radiant_05"
-                    android:layout_height="96dp"
-                    android:layout_width="96dp"
-                    android:scaleType="centerInside"
-                    android:gravity="center" />
-
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/dire_05"
-                    android:layout_height="96dp"
-                    android:layout_width="96dp"
-                    android:scaleType="centerInside"
-                    android:gravity="center" />
-            </TableRow>
-        </TableLayout>
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+    <TextView
+        android:id="@+id/history_lobbyType"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+</LinearLayout>
